--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -1,3 +1,5 @@
+{% comment %} {% extends 'layout.html' %} {% endcomment %}
+
 {% load static %}
 <!doctype html>
 <html>
@@ -95,3 +97,4 @@
 </div>
     </body>
 </html>
+
