--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -53,7 +53,7 @@
 
         {% endblock content %}
 
-    <div class="border-top">
+    <div class="border-top mt-3">
 
     <div class="container">
         <footer class="pt-4 my-md-5 pt-md-5">
