--- a/accounts/templates/accounts/login_form.html
+++ b/accounts/templates/accounts/login_form.html
@@ -4,10 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
-                {% include "_form.html" with form_title="SIGN IN" submit_label="SIGN IN" %}
+                {% include "_form.html" with form_title="LOG IN" submit_label="LOG IN" %}
             </div>
         </div>
     </div>
 {% endblock %}
-
-
