--- a/jyujae/templates/root.html
+++ b/jyujae/templates/root.html
@@ -5,6 +5,8 @@
         <div class="row">
             <div class="col-sm-12">
                 Hi! Welcome to Jstagram
+                <hr/>
+                <a href='{% url "jstagram:post_new" %}' class="btn btn-primary">New Post<a/>
             </div>
         </div>
     </div>
