--- a/jstagram/templates/jstagram/user_page.html
+++ b/jstagram/templates/jstagram/user_page.html
@@ -1,4 +1,5 @@
 {% extends 'jstagram/layout.html' %}
+{% load thumbnail %}
 
 {% block content %}
 <div class="container">
@@ -10,16 +11,16 @@
             {{page_user.username}}
             <a href="{% url 'profile_edit' %}" class="btn btn-secondary btn-sm">Edit Profile</a>
             <hr/>
-            0 posts 0 followers 0 following
+            {{post_list_count}} posts 0 followers 0 following
             <hr/>
             {{page_user.name}}
         </div>
         <div class="row" mt-3>
-        {% for post in post_list%}
-        <div class="col-sm-4">
-                <img src="{{post.photo.url}}" alt="{{post.caption}}" stlye="width:100%"/>
-        </div>
-        {% endfor %}
+            {% for post in post_list%}
+            <div class="col-sm-4 mb-5">
+                <img src="{% thumbnail post.photo 256x256 crop %}" alt="{{post.caption}}" stlye="width:100%"/>
+            </div>
+            {% endfor %}
         </div>
 
     </div>
