--- a/jstagram/templates/jstagram/index.html
+++ b/jstagram/templates/jstagram/index.html
@@ -12,6 +12,8 @@
         <div class="row">
             <div class="col-sm-8 bg-success">
                 Timeline
+                <hr/>
+                {{user.following_set.all}}
             </div>
             <div class="col-sm-4 bg-info">
                 {% include "jstagram/timeline_sidebar.html" %}
