--- a/jstagram/templates/jstagram/timeline_sidebar_user_follow.html
+++ b/jstagram/templates/jstagram/timeline_sidebar_user_follow.html
@@ -1,12 +1,13 @@
-<div class="d-flex mb-2">
-    <div class="p-2">
+<div class="d-flex mb-1">
+    <div class="mr-3">
         <img src="{{suggested_user.avatar_url}}" style="width: 32px; height:32px;" class="rounded-circle"/>
     </div>
-    <div class="p-2">   
+    <div class="">   
         {{suggested_user.username}}    
     </div>
-    <div class="ml-auto">
-        <a href='{% url "user_follow" suggested_user.username %}' >Follow</a>
-        <a href='{% url "user_unfollow" suggested_user.username %}' >Unfollow</a>
+    <div class="">
+        <button onclick="location.href='{% url 'user_follow' suggested_user.username %}'" >Follow</button>
+        <button onclick="location.href='{% url 'user_unfollow' suggested_user.username %}'" >Unfollow</button>
     </div>
 </div>
+
