--- a/jstagram/templates/jstagram/post_detail.html
+++ b/jstagram/templates/jstagram/post_detail.html
@@ -4,24 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="card">
-                    <div class="card-header">
-                        <img src="{{ post.author.avatar_url }}" style="width: 32px; height: 32px;" />
-                        <a href="{% url "jstagram:user_page" post.author.username %}">
-                            {{ post.author.name }}
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <img src="{{post.photo.url}}" style="width:100%;"/>
-                    </div>
-                    <div class="card-footer">
-                        {%for tag in post.tag_set.all%}
-                            <span class="badge badge-primary" style="color:black;">
-                            #{{tag.name}}
-                            </span>
-                        {% endfor%}
-                    </div>
-                </div>
+                {% include "jstagram/_post_card.html"%}
             </div>
         </div>
     </div>
