unfollow/ posting posted based on timeline

--- a/jstagram/templates/jstagram/index.html
+++ b/jstagram/templates/jstagram/index.html
@@ -15,6 +15,8 @@
                     <div class="mb-3">
                     {% include "jstagram/_post_card.html" %}
                     </div>
+                {% empty %}
+                    No posting
                 {% endfor %}
             </div>
             <div class="col-sm-4 bg-info">
