--- a/jstagram/templates/jstagram/timeline_sidebar_user_follow.html
+++ b/jstagram/templates/jstagram/timeline_sidebar_user_follow.html
@@ -2,7 +2,8 @@
     <div class="mr-3">
         <img src="{{suggested_user.avatar_url}}" style="width: 32px; height:32px;" class="rounded-circle"/>
     </div>
-    <div class="">   
+    <div class=""> 
+        <a href="{% url 'jstagram:user_page' suggested_user.username %}"
         {{suggested_user.username}}    
     </div>
     <div class="">
