--- a/jstagram/templates/jstagram/_post_card.html
+++ b/jstagram/templates/jstagram/_post_card.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <img src="{{ post.author.avatar_url }}" style="width: 32px; height: 32px;" />
-        <a href='{% url "jstagram:user_page" post.author.username %}'>
+        <a href='{% url "jstagram:user_page" post.author.username %}' style="text-decoration:none;">
             {{ post.author.name }}
         </a>
     </div>
