--- a/jstagram/templates/jstagram/user_page.html
+++ b/jstagram/templates/jstagram/user_page.html
@@ -10,6 +10,11 @@
         <div class="col-sm-9">
             {{page_user.username}}
             <a href="{% url 'profile_edit' %}" class="btn btn-secondary btn-sm">Edit Profile</a>
+            {% if is_follow %}
+                <a href="{% url 'user_unfollow' page_user.username %}"> Unfollow <a>
+            {% else %}
+                <a href="{% url 'user_follow' page_user.username %}"> Follow <a>
+            {% endif %}
             <hr/>
             {{post_list_count}} posts 0 followers 0 following
             <hr/>
