--- a/jstagram/templates/jstagram/_post_card.html
+++ b/jstagram/templates/jstagram/_post_card.html
@@ -1,3 +1,4 @@
+{% load jstagram_tags %}
 <div class="card">
     <div class="card-header">
         <img src="{{ post.author.avatar_url }}" style="width: 32px; height: 32px;" />
@@ -5,14 +6,25 @@
             {{ post.author.name }}
         </a>
     </div>
+
     <div class="card-body">
         <img src="{{post.photo.url}}" style="width:100%;"/>
-    </div>
-    <div class="card-footer">
         {%for tag in post.tag_set.all%}
             <span class="badge badge-primary" style="color:black;">
             #{{tag.name}}
             </span>
         {% endfor%}
+    </div>
+
+    <div class="card-footer">
+        {% if post|is_like_user:user %}
+            <a href="{% url 'jstagram:post_unlike' post.pk %}" style="color:inherit;">
+                <i class="fa fa-heart"></i>
+            </a>
+        {% else%}
+            <a href="{% url 'jstagram:post_like' post.pk %}" style="color:inherit;">
+                <i class="fa fa-heart-o"></i>
+            </a>
+        {% endif %}
     </div>
 </div>
