--- a/jyujae/templates/layout.html
+++ b/jyujae/templates/layout.html
@@ -4,9 +4,11 @@
     <head>
         <meta charset='utf-8' />
         <title>Jyujae's Jstagram</title>
-        <link rel="stylesheet" href="{% static "bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css" %}" />
-        <script src="{% static "jquery-3.6.0.min.js" %}"></script>
-        <script src="{% static "bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/js/bootstrap.min.js" %}"></script>
+        <link rel="stylesheet" href="{% static 'bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css' %}" />
+        <script src="{% static 'jquery-3.6.0.min.js' %}"></script>
+        <script src="{% static 'bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/js/bootstrap.min.js' %}"></script>
+        {% comment %} <link rel="stylesheet" href="jyujae/static/font-awesome.min.css"> {% endcomment %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
 
