--- a/jstagram/templates/jstagram/_post_card.html
+++ b/jstagram/templates/jstagram/_post_card.html
@@ -1,4 +1,6 @@
-{% load jstagram_tags %}
+{% load humanize jstagram_tags %}
+
+
 <div class="card">
     <div class="card-header">
         <img src="{{ post.author.avatar_url }}" style="width: 32px; height: 32px;" />
@@ -8,23 +10,47 @@
     </div>
 
     <div class="card-body">
+        
+        <div>
         <img src="{{post.photo.url}}" style="width:100%;"/>
         {%for tag in post.tag_set.all%}
             <span class="badge badge-primary" style="color:black;">
             #{{tag.name}}
             </span>
         {% endfor%}
+        </div>
+
+        <div>
+            {% if post|is_like_user:user %}
+                <a href="{% url 'jstagram:post_unlike' post.pk %}" style="color:inherit;">
+                <i class="fa fa-heart"></i>
+                </a>
+            {% else%}
+                <a href="{% url 'jstagram:post_like' post.pk %}" style="color:inherit;">
+                <i class="fa fa-heart-o"></i>
+                </a>
+            {% endif %}
+        </div>
+        <div>
+        <a href="{{ post.get_absolute_url }}" style="" class="text-muted">
+            <small>
+            {{post.created_at|naturaltime}}
+            </small>
+        </a>
+        </div>
+        <div class="comment-list mb-3">
+            <div class="comment">
+            {% for comment in post.comment_set.all %}
+                <strong>{{comment.author}}</strong>
+                {{comment.message}}
+                <small>{{comment.created_at|naturaltime}}</small>
+            {% endfor %}
+            </div>
+        </div>
     </div>
 
     <div class="card-footer">
-        {% if post|is_like_user:user %}
-            <a href="{% url 'jstagram:post_unlike' post.pk %}" style="color:inherit;">
-                <i class="fa fa-heart"></i>
-            </a>
-        {% else%}
-            <a href="{% url 'jstagram:post_like' post.pk %}" style="color:inherit;">
-                <i class="fa fa-heart-o"></i>
-            </a>
-        {% endif %}
+        <a href="">
+        </a>
     </div>
 </div>
