comment with ajax

--- a/jstagram/templates/jstagram/_post_card.html
+++ b/jstagram/templates/jstagram/_post_card.html
@@ -1,56 +1,78 @@
-{% load humanize jstagram_tags %}
-
+{% load bootstrap4 humanize jstagram_tags %}
 
 <div class="card">
     <div class="card-header">
         <img src="{{ post.author.avatar_url }}" style="width: 32px; height: 32px;" />
-        <a href='{% url "jstagram:user_page" post.author.username %}' style="text-decoration:none;">
+        <a href="{% url 'jstagram:user_page' post.author.username %}">
             {{ post.author.name }}
         </a>
     </div>
-
     <div class="card-body">
-        
-        <div>
-        <img src="{{post.photo.url}}" style="width:100%;"/>
-        {%for tag in post.tag_set.all%}
-            <span class="badge badge-primary" style="color:black;">
-            #{{tag.name}}
-            </span>
-        {% endfor%}
-        </div>
+        <img src="{{ post.photo.url }}" style="width: 100%;" />
 
         <div>
             {% if post|is_like_user:user %}
-                <a href="{% url 'jstagram:post_unlike' post.pk %}" style="color:inherit;">
-                <i class="fa fa-heart"></i>
+                <a href="{% url 'jstagram:post_unlike' post.pk %}" style="color: inherit;">
+                    <i class="fa fa-heart"></i>
                 </a>
-            {% else%}
-                <a href="{% url 'jstagram:post_like' post.pk %}" style="color:inherit;">
-                <i class="fa fa-heart-o"></i>
+            {% else %}
+                <a href="{% url 'jstagram:post_like' post.pk %}" style="color: inherit;">
+                    <i class="fa fa-heart-o"></i>
                 </a>
             {% endif %}
         </div>
-        <div>
-        <a href="{{ post.get_absolute_url }}" style="" class="text-muted">
-            <small>
-            {{post.created_at|naturaltime}}
-            </small>
-        </a>
-        </div>
-        <div class="comment-list mb-3">
-            <div class="comment">
+
+        <div id="post-{{ post.pk }}-comment-list" class="comment-list mt-3 mb-3">
             {% for comment in post.comment_set.all %}
-                <strong>{{comment.author}}</strong>
-                {{comment.message}}
-                <small>{{comment.created_at|naturaltime}}</small>
+                {% include "jstagram/_comment.html" %}
             {% endfor %}
-            </div>
+        </div>
+
+        <div>
+            {% for tag in post.tag_set.all %}
+                <span class="badge badge-primary">
+                    #{{ tag.name }}
+                </span>
+            {% endfor %}
+        </div>
+
+        <div>
+            <a href="{{ post.get_absolute_url }}" style="" class="text-muted">
+                <small>
+                    {{ post.created_at|naturaltime }}
+                </small>
+            </a>
         </div>
     </div>
-
     <div class="card-footer">
-        <a href="">
-        </a>
+        <form id="post-{{ post.pk }}-comment-form" action="{% url 'jstagram:comment_new' post.pk %}" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form comment_form %}
+            <input type="submit" value="New Comment" class="btn btn-primary btn-block" />
+        </form>
+
+        <script>
+        $(function() {
+            var form_id = "post-{{ post.pk }}-comment-form";
+            $("#" + form_id).submit(function(e) {
+                e.preventDefault();
+
+                var options = {
+                    success: function(responseText, statusText, xhr, $form) {
+                        console.group("ajaxSubmit response");
+                        console.log(responseText);
+                        console.log(statusText);
+                        console.log(xhr);
+                        console.log($form);
+                        console.groupEnd();
+
+                        $("#post-{{ post.pk }}-comment-list").prepend(responseText);
+                    }
+                };
+                $(this).ajaxSubmit(options);
+            });
+            console.log("document ready.");
+        });
+        </script>
     </div>
 </div>
