final and README

--- a/jstagram/templates/jstagram/user_page.html
+++ b/jstagram/templates/jstagram/user_page.html
@@ -15,6 +15,7 @@
             {% else %}
                 <a href="{% url 'user_follow' page_user.username %}"> Follow <a>
             {% endif %}
+            {% comment %} jstagram/templates/jstagram/user_page.html {% endcomment %}
             <hr/>
             {{post_list_count}} posts 0 followers 0 following
             <hr/>
