--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -65,7 +65,7 @@
               <div class="col-6 col-md">
                 <h5>Features</h5>
                 <ul class="list-unstyled text-small">
-                  <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
+                  <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">bonjour</a></li>
                   <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
                   <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
                   <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
